fix(FrontEnd): hide scrollbars

--- a/APIServer/public/less/style.less
+++ b/APIServer/public/less/style.less
@@ -36,6 +36,7 @@ nav {
 
 body {
     height: 100%;
+    overflow: hidden;
 }
 
 .small-head {
@@ -70,6 +71,7 @@ main {
     >svg {
         margin: -1em;
         width: calc( 100% + 2rem);
+        height: calc( 100% + 2rem);
         box-sizing: content-box;
     }
 }
